tui/src/snapshots/codex_tui__resume_picker_prompt__tests__resume_picker_empty_vt100.snap
---
source: tui/src/resume_picker_prompt.rs
expression: terminal.backend().vt100().screen().contents()
---
Resume a previous session
Type to search
  Updated  Branch  User Request
No sessions yet




enter to resume     esc to start new     ctrl + c to quit     ↑/↓ to browse
